<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/my_home"
            android:checked="true"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/myHomeItem" />
        <item
            android:id="@+id/my_profile"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/myProfileItem" />
        <item
            android:id="@+id/my_rate_app"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/myRateAppItem" />
        <item
            android:id="@+id/myAbout"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/myAboutItem" />

    </group>


</menu>