<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="info.androidhive.materialtabs.fragments.ProfileFragment"
    android:id="@+id/myAbout">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/abdominalAbRoller"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#253977" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/abRollerText1"
        android:id="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/abRollerText2"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/abRollerText3"
        android:id="@+id/textView13"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/abRollerText4"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@drawable/abdominal_ab_roller1"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/abRollerText5"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/abRollerText6"
        android:id="@+id/textView18"
        android:textStyle="bold"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />


</RelativeLayout>

</ScrollView>