<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialtabs.fragments.ProfileFragment"
    android:id="@+id/myAbout">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ArnasAbout"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#253977"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutFitness"
        android:id="@+id/myFitness"
        android:layout_marginTop="170dp"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="false"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutBodybuilding"
        android:id="@+id/myBodyBuilding"
        android:textAlignment="center"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutNutrition"
        android:id="@+id/myNutrition"
        android:layout_below="@+id/myBodyBuilding"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_alignParentEnd="false"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/FitnessText"
        android:id="@+id/textView2"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/BodybuildingText"
        android:id="@+id/textView8"
        android:layout_below="@+id/myFitness"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NutritionText"
        android:id="@+id/textView9"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/myBodyBuilding"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/imageView1"
        android:src="@drawable/about"
        android:layout_alignTop="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>